[gd_scene load_steps=5 format=3 uid="uid://cgxloinharrxi"]

[ext_resource type="Script" path="res://Scripts/weapon.gd" id="1_67uiy"]
[ext_resource type="Texture2D" uid="uid://dc4g2haas420p" path="res://Sprites/Weapons/battle_axe3.png" id="1_omil8"]

[sub_resource type="Animation" id="Animation_ji2en"]
resource_name = "swing_weapon_arc"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Axe/WeaponSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, 1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x4vys"]
_data = {
"swing_weapon_arc": SubResource("Animation_ji2en")
}

[node name="Axe" type="Node2D"]
script = ExtResource("1_67uiy")

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_x4vys")
}
speed_scale = 3.0

[node name="DamageDelayTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="WeaponSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_omil8")
offset = Vector2(15, -15)

[node name="WeaponArea2D" type="Area2D" parent="WeaponSprite"]
collision_layer = 4

[node name="WeaponCollider" type="CollisionPolygon2D" parent="WeaponSprite/WeaponArea2D"]
rotation = -0.00247703
polygon = PackedVector2Array(3.00247, -0.992566, 19.0272, -10.9529, 28.0321, -12.9306, 30.0569, -22.9256, 23.0742, -29.9429, 14.0718, -28.9652, 12.047, -18.9702, 1.00743, -2.99751)
disabled = true

[connection signal="animation_finished" from="AttackAnimation" to="." method="_on_attack_animation_animation_finished"]
[connection signal="timeout" from="DamageDelayTimer" to="." method="_on_damage_delay_timer_timeout"]
[connection signal="body_entered" from="WeaponSprite/WeaponArea2D" to="." method="_on_weapon_area_2d_body_entered"]
